--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.2",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
+    "uuid": "^9.0.0",
     "vite": "^4.2.0"
   }
 }
