--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -14,21 +17,32 @@
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
+    "@vitejs/plugin-react": "^4.0.4",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.10.0",
+    "vitest": "^0.34.1",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@mui/styles": "^5.14.3",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.2",
-    "@vitejs/plugin-react": "^3.1.0",
+    "jest": "^29.6.2",
+    "jsdom": "^22.1.0",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
-    "vite": "^4.2.0"
+    "vite": "^4.4.9"
   }
 }
