--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.2",
+    "@vitest/coverage-v8": "^0.34.1",
     "jest": "^29.6.2",
     "jsdom": "^22.1.0",
     "typescript": "^4.9.3",
