--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@types/jest": "^29.5.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/uuid": "^9.0.2",
     "@vitest/coverage-v8": "^0.34.1",
     "jest": "^29.6.2",
     "jsdom": "^22.1.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
     "vite": "^4.4.9"
