--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@vitejs/plugin-react": "^4.0.4",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "json-server": "^0.17.3",
+    "n": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "vitest": "^0.34.1",
     "yarn": "^1.22.19",
@@ -43,6 +45,7 @@
     "@vitest/coverage-v8": "^0.34.1",
     "jest": "^29.6.2",
     "jsdom": "^22.1.0",
+    "msw": "^1.2.3",
     "react-test-renderer": "^18.2.0",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
