--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/uuid": "^9.0.2",
     "@vitest/coverage-v8": "^0.34.1",
+    "axios": "^1.5.0",
     "jest": "^29.6.2",
     "jsdom": "^22.1.0",
     "msw": "^1.2.3",
