--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
+    "@types/node": "^20.5.9",
     "@vitejs/plugin-react": "^4.0.4",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "json-server": "^0.17.3",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.10.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.1",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
