--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,35 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": "./",
+    "paths": {
+      "src/*": ["./src/*"],
+      "assets/*": ["./src/assets/*"],
+      "assets": ["./src/assets"],
+      // We define this path for all files/folders inside
+      // components folder:
+      "components/*": ["./src/components/*"],
+      // We define this path for the index.ts file inside the
+      // components folder:
+      "components": ["./src/components"],
+      "context/*": ["./src/context/*"],
+      "context": ["./src/context"],
+      "hooks/*": ["./src/hooks/*"],
+      "hooks": ["./src/hooks"],
+      "pages/*": ["./src/pages/*"],
+      "pages": ["./src/pages"],
+      "providers/*": ["./src/providers/*"],
+      "providers": ["./src/providers"],
+      "routes/*": ["./src/routes/*"],
+      "routes": ["./src/routes"],
+      "services/*": ["./src/services/*"],
+      "services": ["./src/services"],
+      "shared/*": ["./src/shared/*"],
+      "shared": ["./src/shared"],
+      "theme/*": ["./src/theme/*"],
+      "theme": ["./src/theme"],
+      "utils/*": ["./src/utils/*"],
+      "utils": ["./src/utils"]
+    },
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
