--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,34 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "paths": {
       "src/*": ["./src/*"],
-      "assets/*": ["./src/assets/*"],
-      "assets": ["./src/assets"],
+      "assets/*": ["./assets/*"],
+      "assets": ["./assets"],
       // We define this path for all files/folders inside
       // components folder:
-      "components/*": ["./src/components/*"],
+      "components/*": ["./components/*"],
       // We define this path for the index.ts file inside the
       // components folder:
-      "components": ["./src/components"],
-      "context/*": ["./src/context/*"],
-      "context": ["./src/context"],
-      "hooks/*": ["./src/hooks/*"],
-      "hooks": ["./src/hooks"],
-      "pages/*": ["./src/pages/*"],
-      "pages": ["./src/pages"],
-      "providers/*": ["./src/providers/*"],
-      "providers": ["./src/providers"],
-      "routes/*": ["./src/routes/*"],
-      "routes": ["./src/routes"],
-      "services/*": ["./src/services/*"],
-      "services": ["./src/services"],
-      "shared/*": ["./src/shared/*"],
-      "shared": ["./src/shared"],
-      "theme/*": ["./src/theme/*"],
-      "theme": ["./src/theme"],
-      "utils/*": ["./src/utils/*"],
-      "utils": ["./src/utils"]
+      "components": ["./components"],
+      "context/*": ["./context/*"],
+      "context": ["./context"],
+      "hooks/*": ["./hooks/*"],
+      "hooks": ["./hooks"],
+      "pages/*": ["./pages/*"],
+      "pages": ["./pages"],
+      "providers/*": ["./providers/*"],
+      "providers": ["./providers"],
+      "routes/*": ["./routes/*"],
+      "routes": ["./routes"],
+      "services/*": ["./services/*"],
+      "services": ["./services"],
+      "shared/*": ["./shared/*"],
+      "shared": ["./shared"],
+      "theme/*": ["./theme/*"],
+      "theme": ["./theme"],
+      "utils/*": ["./utils/*"],
+      "utils": ["./utils"]
     },
     "target": "ESNext",
     "useDefineForClassFields": true,
