--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.1",
     "yarn": "^1.22.19",
