--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^2.9.10",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.11.16",
+    "@mui/material": "^5.14.8",
     "@types/node": "^20.5.9",
     "@vitejs/plugin-react": "^4.0.4",
     "@vitejs/plugin-react-refresh": "^1.3.6",
@@ -28,6 +30,7 @@
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.3",
+    "vite-plugin-svgr": "^3.2.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.1",
     "yarn": "^1.22.19",
