--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.45.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.3",
     "vite-plugin-svgr": "^3.2.0",
@@ -46,6 +47,7 @@
     "@types/jest": "^29.5.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lazy-load-image-component": "^1.6.0",
     "@types/react-test-renderer": "^18.0.0",
     "@types/uuid": "^9.0.2",
     "@vitest/coverage-v8": "^0.34.1",
