--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "react-toastify": "^9.1.3",
     "vite-plugin-svgr": "^3.2.0",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.1",
+    "vitest": "^0.34.6",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@mui/styles": "^5.14.3",
     "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
@@ -50,6 +50,7 @@
     "@types/react-lazy-load-image-component": "^1.6.0",
     "@types/react-test-renderer": "^18.0.0",
     "@types/uuid": "^9.0.2",
+    "@vitejs/plugin-react-swc": "^3.4.0",
     "@vitest/coverage-v8": "^0.34.1",
     "axios": "^1.5.0",
     "jest": "^29.6.2",
